<resources>
	<!-- GENERAL STRING  -->
	<string name="app_name">MidWay</string>
	<string name="title_activity_maps">MapsActivity</string>
	<string name="mapId">f98f922f818fe560</string>


	<!--	//ALEX = AIzaSyDR3NrmbrjstWl59Wwy23yjBS3nrp67kT4  -->
	<!--	//ADNAN = AIzaSyDjO6PUHubAOFISZ8CF2t2OykYQ04DbM3M  -->
	<string name="maps_key">AIzaSyDR3NrmbrjstWl59Wwy23yjBS3nrp67kT4</string>

	<string name="empty_value">" "</string>

	<!-- LOGIN LAYOUT -->
	<string name="email">Courriel</string>
	<string name="password">Mot de passe</string>
	<string name="signIn_button">Se connecter</string>
	<string name="login_OR_String">OU</string>
	<string name="googlesigninlogo">googleSignInLogo</string>
	<string name="facebooksigninlogo">FacebookSignInLogo</string>
	<string name="login_register">Inscrivez-vous maintenant.</string>
	<string name="enregistrer">Enregistrer</string>
	<string name="nonMembre">Première fois sur Midway?</string>


	<!-- MAPS LAYOUT -->
	<string name="search_address_1">Entrez votre addresse</string>

	<!-- BUSINESS DIALOG LAYOUT -->
	<string name="restaurants">Restaurants</string>
	<string name="bars">Bars</string>
	<string name="caf_s">Cafés</string>
	<string name="disco">Disco</string>
	<string name="businessRow_address">address</string>
	<string name="businessRow_name">name</string>
	<string name="businessRow_rating">rating</string>


	<!-- FACEBOOK LOGIN -->
	<!--	================= ADNAN ================== -->
	<!--			<string name="facebook_app_id">1533089473800999</string>-->
	<!--			<string name="fb_login_protocol_scheme">fb1234</string>-->
	<!--			<string name="facebook_client_token">05ca6dbe06bc31eb2f1a7977a848c3fc</string>-->

	<!--================= ALEX ================== -->
	<string name="facebook_app_id">1369837933544502</string>
	<string name="fb_login_protocol_scheme">fb1234</string>
	<string name="facebook_client_token">41805522f50b1bf1c0ea433671549089</string>


	<!-- PROFILE LAYOUT -->
	<string name="profile_picture">Profile Picture</string>
	<string name="historique_de_rencontres">Historique de rencontres</string>
	<string name="changer_le_mot_de_passe">Changer le mot de passe</string>
	<string name="param_tres">Paramètres</string>
	<string name="propos">À propos</string>
	<string name="nom_complet">Nom Complet</string>
	<string name="se_d_connecter">Se déconnecter</string>


	<!-- HISTORY LAYOUT -->

	<string name="history_title">Historique</string>
	<string name="history_row_tab">1</string>
	<string name="sampleText">lorem ipsum</string>
	<string name="history_row_togo"><![CDATA[>]]></string>


	<!-- THEME STRINGs  -->

	<string name="mapThemeMutedBlue">[{\"featureType\":\"all\",\"stylers\":[{\"saturation\":0},{\"hue\":\"#e7ecf0\"}]},{\"featureType\":\"road\",\"stylers\":[{\"saturation\":-70}]},{\"featureType\":\"transit\",\"stylers\":[{\"visibility\":\"off\"}]},{\"featureType\":\"poi\",\"stylers\":[{\"visibility\":\"off\"}]},{\"featureType\":\"water\",\"stylers\":[{\"visibility\":\"simplified\"},{\"saturation\":-60}]}]</string>
	<string name="mapThemeMidnight">[{\"featureType\":\"all\",\n\"elementType\": \"labels.text.fill\",\n\"stylers\": [\n{\n\"color\": \"#ffffff\"\n}\n]\n},\n{\n\"featureType\": \"all\",\n\"elementType\": \"labels.text.stroke\",\n\"stylers\": [\n{\n\"color\": \"#000000\"\n},\n{\n\"lightness\": 13\n}\n]\n},\n{\n\"featureType\": \"administrative\",\n\"elementType\": \"geometry.fill\",\n\"stylers\": [\n{\n\"color\": \"#000000\"\n}\n]\n},\n{\n\"featureType\": \"administrative\",\n\"elementType\": \"geometry.stroke\",\n\"stylers\": [\n{\n    \"color\": \"#144b53\"\n},\n{\n    \"lightness\": 14\n},\n{\n    \"weight\": 1.4\n}\n]\n},\n{\n    \"featureType\": \"landscape\",\n    \"elementType\": \"all\",\n    \"stylers\": [\n{\n    \"color\": \"#08304b\"\n}\n    ]\n},\n{\n    \"featureType\": \"poi\",\n    \"elementType\": \"geometry\",\n    \"stylers\": [\n{\n    \"color\": \"#0c4152\"\n},\n{\n    \"lightness\": 5\n}\n    ]\n},\n{\n    \"featureType\": \"road.highway\",\n    \"elementType\": \"geometry.fill\",\n    \"stylers\": [\n{\n    \"color\": \"#000000\"\n}\n    ]\n},\n{\n    \"featureType\": \"road.highway\",\n    \"elementType\": \"geometry.stroke\",\n    \"stylers\": [\n{\n    \"color\": \"#0b434f\"\n},\n{\n    \"lightness\": 25\n}\n    ]\n},\n{\n    \"featureType\": \"road.arterial\",\n    \"elementType\": \"geometry.fill\",\n    \"stylers\": [\n{\n    \"color\": \"#000000\"\n}\n    ]\n},\n{\n    \"featureType\": \"road.arterial\",\n    \"elementType\": \"geometry.stroke\",\n    \"stylers\": [\n{\n    \"color\": \"#0b3d51\"\n},\n{\n    \"lightness\": 16\n}\n    ]\n},\n{\n    \"featureType\": \"road.local\",\n    \"elementType\": \"geometry\",\n    \"stylers\": [\n{\n    \"color\": \"#000000\"\n}\n    ]\n},\n{\n    \"featureType\": \"transit\",\n    \"elementType\": \"all\",\n    \"stylers\": [\n{\n    \"color\": \"#146474\"\n}\n    ]\n},\n{\n    \"featureType\": \"water\",\n    \"elementType\": \"all\",\n    \"stylers\": [\n{\n    \"color\": \"#021019\"\n}\n    ]\n}\n]</string>
	<string name="mapThemeBlackAndWhite">[\n{\n    \"featureType\": \"road\",\n    \"elementType\": \"labels\",\n    \"stylers\": [\n        {\n            \"visibility\": \"on\"\n        }\n    ]\n},\n{\n    \"featureType\": \"poi\",\n    \"stylers\": [\n        {\n            \"visibility\": \"off\"\n        }\n    ]\n},\n{\n    \"featureType\": \"administrative\",\n    \"stylers\": [\n        {\n            \"visibility\": \"off\"\n        }\n    ]\n},\n{\n    \"featureType\": \"road\",\n    \"elementType\": \"geometry.fill\",\n    \"stylers\": [\n        {\n            \"color\": \"#000000\"\n        },\n        {\n            \"weight\": 1\n        }\n    ]\n},\n{\n    \"featureType\": \"road\",\n    \"elementType\": \"geometry.stroke\",\n    \"stylers\": [\n        {\n            \"color\": \"#000000\"\n        },\n        {\n            \"weight\": 0.8\n        }\n    ]\n},\n{\n    \"featureType\": \"landscape\",\n    \"stylers\": [\n        {\n            \"color\": \"#ffffff\"\n        }\n    ]\n},\n{\n    \"featureType\": \"water\",\n    \"stylers\": [\n        {\n            \"visibility\": \"off\"\n        }\n    ]\n},\n{\n    \"featureType\": \"transit\",\n    \"stylers\": [\n        {\n            \"visibility\": \"off\"\n        }\n    ]\n},\n{\n    \"elementType\": \"labels\",\n    \"stylers\": [\n        {\n            \"visibility\": \"off\"\n        }\n    ]\n},\n{\n    \"elementType\": \"labels.text\",\n    \"stylers\": [\n        {\n            \"visibility\": \"on\"\n        }\n    ]\n},\n{\n    \"elementType\": \"labels.text.stroke\",\n    \"stylers\": [\n        {\n            \"color\": \"#ffffff\"\n        }\n    ]\n},\n{\n    \"elementType\": \"labels.text.fill\",\n    \"stylers\": [\n        {\n            \"color\": \"#000000\"\n        }\n    ]\n},\n{\n    \"elementType\": \"labels.icon\",\n    \"stylers\": [\n        {\n            \"visibility\": \"on\"\n        }\n    ]\n}\n]</string>
	<string name="mapThemeultraLight">[\n{\n    \"featureType\": \"water\",\n    \"elementType\": \"geometry\",\n    \"stylers\": [\n        {\n            \"color\": \"#e9e9e9\"\n        },\n        {\n            \"lightness\": 17\n        }\n    ]\n},\n{\n    \"featureType\": \"landscape\",\n    \"elementType\": \"geometry\",\n    \"stylers\": [\n        {\n            \"color\": \"#f5f5f5\"\n        },\n        {\n            \"lightness\": 20\n        }\n    ]\n},\n{\n    \"featureType\": \"road.highway\",\n    \"elementType\": \"geometry.fill\",\n    \"stylers\": [\n        {\n            \"color\": \"#ffffff\"\n        },\n        {\n            \"lightness\": 17\n        }\n    ]\n},\n{\n    \"featureType\": \"road.highway\",\n    \"elementType\": \"geometry.stroke\",\n    \"stylers\": [\n        {\n            \"color\": \"#ffffff\"\n        },\n        {\n            \"lightness\": 29\n        },\n        {\n            \"weight\": 0.2\n        }\n    ]\n},\n{\n    \"featureType\": \"road.arterial\",\n    \"elementType\": \"geometry\",\n    \"stylers\": [\n        {\n            \"color\": \"#ffffff\"\n        },\n        {\n            \"lightness\": 18\n        }\n    ]\n},\n{\n    \"featureType\": \"road.local\",\n    \"elementType\": \"geometry\",\n    \"stylers\": [\n        {\n            \"color\": \"#ffffff\"\n        },\n        {\n            \"lightness\": 16\n        }\n    ]\n},\n{\n    \"featureType\": \"poi\",\n    \"elementType\": \"geometry\",\n    \"stylers\": [\n        {\n            \"color\": \"#f5f5f5\"\n        },\n        {\n            \"lightness\": 21\n        }\n    ]\n},\n{\n    \"featureType\": \"poi.park\",\n    \"elementType\": \"geometry\",\n    \"stylers\": [\n        {\n            \"color\": \"#dedede\"\n        },\n        {\n            \"lightness\": 21\n        }\n    ]\n},\n{\n    \"elementType\": \"labels.text.stroke\",\n    \"stylers\": [\n        {\n            \"visibility\": \"on\"\n        },\n        {\n            \"color\": \"#ffffff\"\n        },\n        {\n            \"lightness\": 16\n        }\n    ]\n},\n{\n    \"elementType\": \"labels.text.fill\",\n    \"stylers\": [\n        {\n            \"saturation\": 36\n        },\n        {\n            \"color\": \"#333333\"\n        },\n        {\n            \"lightness\": 40\n        }\n    ]\n},\n{\n    \"elementType\": \"labels.icon\",\n    \"stylers\": [\n        {\n            \"visibility\": \"off\"\n        }\n    ]\n},\n{\n    \"featureType\": \"transit\",\n    \"elementType\": \"geometry\",\n    \"stylers\": [\n        {\n            \"color\": \"#f2f2f2\"\n        },\n        {\n            \"lightness\": 19\n        }\n    ]\n},\n{\n    \"featureType\": \"administrative\",\n    \"elementType\": \"geometry.fill\",\n    \"stylers\": [\n        {\n            \"color\": \"#fefefe\"\n        },\n        {\n            \"lightness\": 20\n        }\n    ]\n},\n{\n    \"featureType\": \"administrative\",\n    \"elementType\": \"geometry.stroke\",\n    \"stylers\": [\n        {\n            \"color\": \"#fefefe\"\n        },\n        {\n            \"lightness\": 17\n        },\n        {\n            \"weight\": 1.2\n        }\n    ]\n}\n]</string>
	<string name="mapThemeBlueEssence">[\n{\n    \"featureType\": \"landscape.natural\",\n    \"elementType\": \"geometry.fill\",\n    \"stylers\": [\n        {\n            \"visibility\": \"on\"\n        },\n        {\n            \"color\": \"#e0efef\"\n        }\n    ]\n},\n{\n    \"featureType\": \"poi\",\n    \"elementType\": \"geometry.fill\",\n    \"stylers\": [\n        {\n            \"visibility\": \"on\"\n        },\n        {\n            \"hue\": \"#1900ff\"\n        },\n        {\n            \"color\": \"#c0e8e8\"\n        }\n    ]\n},\n{\n    \"featureType\": \"road\",\n    \"elementType\": \"geometry\",\n    \"stylers\": [\n        {\n            \"lightness\": 100\n        },\n        {\n            \"visibility\": \"simplified\"\n        }\n    ]\n},\n{\n    \"featureType\": \"road\",\n    \"elementType\": \"labels\",\n    \"stylers\": [\n        {\n            \"visibility\": \"off\"\n        }\n    ]\n},\n{\n    \"featureType\": \"transit.line\",\n    \"elementType\": \"geometry\",\n    \"stylers\": [\n        {\n            \"visibility\": \"on\"\n        },\n        {\n            \"lightness\": 700\n        }\n    ]\n},\n{\n    \"featureType\": \"water\",\n    \"elementType\": \"all\",\n    \"stylers\": [\n        {\n            \"color\": \"#7dcdcd\"\n        }\n    ]\n}\n]</string>
	<string name="membre">Vous êtes déjà membre?</string>
	<string name="connectez_vous_maintenant">Connectez-vous maintenant</string>

	<!-- XXXXXX LAYOUT -->
	<!-- XXXXXX LAYOUT -->
</resources>