<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="60dp"
	android:layout_margin="2dp"
	android:orientation="horizontal"
	>

	<ImageView
		android:id="@+id/businessImage"
		android:layout_width="60dp"
		android:layout_height="60dp"
		android:background="@drawable/list_item_component_border"
		android:contentDescription="@string/empty_value"
		android:gravity="center"
		android:scaleType="centerCrop"
		android:src="@drawable/ic_restaurant_foreground"
		/>


	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="60dp"
		android:background="@drawable/list_item_component_border"
		android:orientation="vertical"
		>

		<TextView
			android:id="@+id/businessName"
			android:layout_width="250dp"
			android:layout_height="30dp"
			android:background="@drawable/list_item_component_border"
			android:gravity="center"
			android:text="@string/businessRow_name"
			android:textColor="@color/blue5"
			android:textSize="15sp"
			android:textStyle="bold"
			/>


		<TextView
			android:id="@+id/businessAddress"
			android:layout_width="250dp"
			android:layout_height="30dp"
			android:background="@drawable/list_item_component_border"
			android:gravity="center"
			android:text="@string/businessRow_address"
			android:textColor="@color/blue5"
			android:textSize="12sp"
			android:textStyle="bold"
			/>

	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@drawable/list_item_component_border"
		android:weightSum="100"
		>

		<TextView
			android:id="@+id/businessRating"
			android:layout_width="0dp"
			android:layout_height="60dp"
			android:layout_weight="50"
			android:gravity="center"
			android:text="@string/businessRow_rating"
			android:textAlignment="center"
			android:textColor="@color/blue5"
			android:textSize="17sp"
			android:textStyle="bold"
			/>

		<ImageView
			android:id="@+id/chooseBusiness"
			android:layout_width="0dp"
			android:layout_height="35dp"
			android:layout_gravity="center"
			android:layout_weight="50"
			android:contentDescription="@string/empty_value"
			android:scaleType="centerCrop"
			android:src="@drawable/ic_go_foreground"
			/>

		<!--		</LinearLayout>-->

	</LinearLayout>

</LinearLayout>