<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"

	android:id="@+id/rootContainer"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/blue1"
	android:orientation="vertical"
	android:weightSum="100"
	app:layout_constraintBottom_toBottomOf="parent"
	app:layout_constraintEnd_toEndOf="parent"
	app:layout_constraintStart_toStartOf="parent"
	app:layout_constraintTop_toTopOf="parent"
	>

	<!--	START TOP CONTAINER-->
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="50"
		android:gravity="center"
		>

		<androidx.viewpager.widget.ViewPager
			android:id="@+id/pager"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_margin="25dp"
			android:background="@color/white"
			/>

	</LinearLayout><!--	END TOP CONTAINER-->


	<!--	START BOTTOM CONTAINER-->
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="50"
		android:gravity="center_horizontal"
		android:orientation="vertical"
		>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
			android:gravity="center"
			android:orientation="vertical"
			>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="25dp"
				android:layout_marginStart="50dp"
				android:layout_marginEnd="50dp"
				android:labelFor="@+id/emailInput_signIn"

				android:text="@string/email"
				android:textColor="@color/white"
				android:textSize="18sp"
				/>

			<EditText
				android:id="@+id/input_email"
				android:layout_width="match_parent"
				android:layout_height="40dp"
				android:layout_marginStart="50dp"
				android:layout_marginEnd="50dp"
				android:autofillHints="emailAddress"
				android:background="@color/white"
				android:inputType="textEmailAddress"
				/>

		</LinearLayout> <!-- EMAIL INPUT -->

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
			android:gravity="center"
			android:orientation="vertical"
			>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="25dp"
				android:layout_marginStart="50dp"
				android:layout_marginEnd="50dp"
				android:labelFor="@+id/passwordInput_signIn"
				android:text="@string/password"

				android:textColor="@color/white"
				android:textSize="18sp"
				/>

			<EditText
				android:id="@+id/input_password"
				android:layout_width="match_parent"
				android:layout_height="40dp"
				android:layout_marginStart="50dp"
				android:layout_marginEnd="50dp"
				android:autofillHints="password"
				android:background="@color/white"
				android:inputType="textPassword"
				/>


		</LinearLayout> <!-- PASSWORD INPUT -->


		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
			android:gravity="center"

			android:orientation="vertical"
			>

			<Button
				android:id="@+id/btn_signIn"
				android:layout_width="200dp"
				android:layout_height="wrap_content"
				android:backgroundTint="@color/white"
				android:text="@string/signIn_button"
				android:textColor="@color/blue1"
				/>

		</LinearLayout>  <!-- SIGN IN BUTTON -->


		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="15dp"
			android:text="@string/login_OR_String"
			android:textColor="@color/white"
			/>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="15dp"
			android:gravity="center"
			android:orientation="horizontal"
			>

			<ImageView
				android:id="@+id/btn_google"
				android:layout_width="55dp"
				android:layout_height="55dp"
				android:contentDescription="@string/googlesigninlogo"
				android:scaleType="fitXY"
				android:src="@drawable/ic_google_icon"
				/>

			<Space
				android:layout_width="20dp"
				android:layout_height="0dp"
				/>

			<ImageView
				android:id="@+id/btn_facebook"
				android:layout_width="55dp"
				android:layout_height="55dp"
				android:contentDescription="@string/facebooksigninlogo"
				android:scaleType="fitXY"
				android:src="@drawable/ic_facebook_icon_background"
				/>
		</LinearLayout>


	</LinearLayout> <!--	END BOTTOM CONTAINER-->

</LinearLayout> <!--	END ROOT CONTAINER-->

