<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	>

	<LinearLayout
		android:id="@+id/linearLayoutRoot"
		android:layout_width="match_parent"
		android:layout_height="400dp"
		android:background="@drawable/business_dialog_style"
		android:orientation="vertical"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="1.0"
		>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:orientation="horizontal"
			android:padding="10dp"
			android:weightSum="100"
			>

			<TextView
				android:id="@+id/textview_restaurants"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_margin="5dp"
				android:layout_weight="40"
				android:background="@drawable/business_layout_tab_filters_border"
				android:gravity="center"
				android:padding="10dp"
				android:text="@string/restaurants"
				android:textAlignment="center"
				android:textColor="@color/blue5"
				android:textSize="15sp"
				android:textStyle="bold"
				/>

			<TextView
				android:id="@+id/textview_bars"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_margin="5dp"
				android:layout_weight="20"
				android:background="@drawable/business_layout_tab_filters_border"
				android:gravity="center"
				android:padding="10dp"
				android:text="@string/bars"
				android:textAlignment="center"
				android:textColor="@color/blue5"
				android:textSize="15sp"
				android:textStyle="bold"
				/>

			<TextView
				android:id="@+id/textview_cafes"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_margin="5dp"
				android:layout_weight="20"
				android:background="@drawable/business_layout_tab_filters_border"
				android:gravity="center"
				android:padding="10dp"
				android:text="@string/caf_s"
				android:textAlignment="center"
				android:textColor="@color/blue5"
				android:textSize="15sp"
				android:textStyle="bold"
				/>

			<TextView
				android:id="@+id/discos"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_margin="5dp"
				android:layout_weight="20"
				android:background="@drawable/business_layout_tab_filters_border"
				android:gravity="center"
				android:padding="10dp"
				android:text="@string/disco"
				android:textAlignment="center"
				android:textColor="@color/blue5"
				android:textSize="15sp"
				android:textStyle="bold"
				/>

		</LinearLayout>

		<androidx.recyclerview.widget.RecyclerView

			android:id="@+id/recycleView_business"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			/>


	</LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>