<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/linearLayoutRoot"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:background="@drawable/places_listes_border"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp">

            <TextView
                android:id="@+id/textview_restaurants"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:background="@drawable/places_filtre_border"
                android:padding="10dp"
                android:text="@string/restaurants"
                android:gravity="center"
                android:textColor="@color/blue5"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textview_bars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:background="@drawable/places_filtre_border"
                android:padding="10dp"
                android:text="@string/bars"
                android:gravity="center"
                android:textColor="@color/blue5"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textview_cafes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:background="@drawable/places_filtre_border"
                android:padding="10dp"
                android:text="@string/caf_s"
                android:gravity="center"
                android:textColor="@color/blue5"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/discos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/places_filtre_border"
                android:padding="10dp"
                android:text="@string/disco"
                android:gravity="center"
                android:textColor="@color/blue5"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>

        <ListView
            android:id="@+id/listview_places"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>