<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue1"
    tools:context=".ui.ProfileActivity">


    <!--    PHOTO DE PROFIL     -->

    <ImageView
        android:id="@+id/imageView_profile_picture"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@drawable/profile_picture_border"
        android:contentDescription="@string/profile_picture"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:scaleType="centerCrop"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.105" />

    <TextView
        android:id="@+id/textview_fullname"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:background="@color/blue1"
        android:gravity="center"
        android:text="Full Name"
        android:textColor="@color/red"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_profile_picture" />

    <!--    BOUTON HISTORIQUE DE RENCONTRES     -->
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="330dp"
        android:layout_height="60dp"
        android:background="@drawable/profile_activity_border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_history_foreground" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"

            android:paddingEnd="5dp"
            android:text="@string/historique_de_rencontres"
            android:textColor="@color/blue1"
            android:textSize="22sp"
            android:textStyle="bold" />


    </LinearLayout>

    <!--    BOUTON CHANGER MOT DE PASSE     -->
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="330dp"
        android:layout_height="60dp"
        android:background="@drawable/profile_activity_border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.060000002">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_lock_foreground" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingEnd="5dp"
            android:text="@string/changer_le_mot_de_passe"
            android:textColor="@color/blue1"
            android:textSize="22sp"
            android:textStyle="bold" />


    </LinearLayout>

    <!--    BOUTON PARAMETRES   -->
    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="330dp"
        android:layout_height="60dp"
        android:background="@drawable/profile_activity_border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.07999998">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_settings_foreground" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingEnd="20dp"
            android:gravity="center"
            android:text="@string/param_tres"
            android:textColor="@color/blue1"
            android:textSize="22sp"
            android:textStyle="bold" />


    </LinearLayout>
    <!--    BOUTON A PROPOS   -->
    <LinearLayout
        android:layout_width="330dp"
        android:layout_height="60dp"
        android:background="@drawable/profile_activity_border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintVertical_bias="0.120000005">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_info_foreground" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingEnd="20dp"
            android:gravity="center"
            android:text="@string/propos"
            android:textColor="@color/blue1"
            android:textSize="22sp"
            android:textStyle="bold" />


    </LinearLayout>






</androidx.constraintlayout.widget.ConstraintLayout>